--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "babel-node app.js --presets es2015,stage-2",
     "build": "babel app.js -d dist",
-    "start2": "node app.js"
+    "start2": "node app.js",
+    "hbuild": "NODE_ENV=production webpack --config ./webpack.prod.config.js --progress --colors",
+    "hstart": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -15,10 +17,20 @@
     "babel-cli": "^6.18.0",
     "babel-core": "^6.18.0",
     "babel-loader": "^6.2.7",
+    "babel-plugin-react-transform": "^2.0.2",
     "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.16.0",
     "babel-preset-stage-2": "^6.18.0",
     "babel-register": "^6.18.0",
     "express": "^4.14.0",
-    "webpack": "^1.13.3"
+    "webpack": "^1.13.3",
+    "webpack-dev-middleware": "^1.8.4",
+    "webpack-hot-middleware": "^2.13.1"
+  },
+  "dependencies": {
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   }
 }
